--- a/style/libs/images/qt_alert.css
+++ b/style/libs/images/qt_alert.css
@@ -1,4 +1,4 @@
-.opacty{display:block;position:absolute;background:#000:top:0;left:0;filter:Alpha(opacity=20);opacity:0.2;top:0;left:0}
+.opacty{display:block;position:absolute;background:#000;top:0;left:0;filter:Alpha(opacity=20);opacity:0.2;top:0;left:0}
 .div_tips,.div_tips2{background: #fff;-moz-border-radius:3px;-webkit-border-radius:3px;border-radius:3px;border:1px solid #bfbfbf;border-top:4px solid #19a97b;box-shadow:0 0 12px #bfbfbf;}
 .wxTips{border:1px solid #888;-webkit-box-shadow:#333 0px 0px 12px;-moz-box-shadow:#333 0px 0px 12px;box-shadow:#333 0px 0px 12px;-moz-border-radius:5px;-webkit-border-radius:5px;border-radius:5px;background:#fff;position:absolute;z-index:20000;}
 #tips_20130528_opacity{width:100%;height:100%;position:absolute;background:#000;left:0;top:0;z-index:19000;filter:Alpha(opacity=70);opacity:0.7;}
