--- a/style/back/css/admin.css
+++ b/style/back/css/admin.css
@@ -43,6 +43,8 @@ em,i{font-style:normal;}
 /*红色星标*/
 .fred{color:red;}
 
+/*宽度*/
+.w_100{width:100px;}
 
 /* 置顶 */
 .to-top-a {width: 50px;height:50px;background:url(../image/backtop.jpg) no-repeat 0 bottom;display:block;border-radius:2px;}
@@ -301,3 +303,78 @@ textarea{border: 1px solid #ccc;border-radius: 2px;width:760px;height:40px;paddi
 .login_dom .login_box{position:relative;}
 .login_dom .login_box .login_close{right:-22px;top:-22px;position:absolute;background:url(../image/login_close.png) no-repeat 50% 50%;display:block;height:30px;width:30px;text-align:center;font:20px/30px "Arial Negreta", "Arial";color:#fff;}
 .login_dom .login_box .login_close:hover{color:#32DAA3;}
+
+/*后台首页*/
+.columns-mod{
+        width:490px;
+        height:320px;
+        border-radius: 5px;
+        -moz-border-radius:5px;
+        -webkit-border-radius:5px;
+    }
+    .hd{
+        border-radius: 5px 5px 0 0;
+        -moz-border-radius: 5px 5px 0 0;
+        -webkit-border-radius: 5px 5px 0 0;
+        background-color: #F2F2F2;
+        height: 30px;
+        line-height: 30px;
+        padding: 0 10px 0 15px;
+    }
+    .bd{
+        background-color: rgba(250, 250, 250, 0.3);
+        border-radius: 0 0 5px 5px;
+        -moz-border-radius: 5px 5px 0 0;
+        -webkit-border-radius: 5px 5px 0 0;
+        height: 200px;
+        overflow: hidden;
+        border-bottom: 1px solid #F2F2F2;
+        border-left: 1px solid #F2F2F2;
+        border-right: 1px solid #F2F2F2;
+    }
+    .sys-info{
+        padding: 15px;
+    }
+    .sys-info table{
+        border-collapse: collapse;
+        border-spacing: 0;
+        width: 100%;
+        margin: 0;
+        padding: 0;
+    }
+    .sys-info table a:hover{text-decoration: none;}
+    .sys-info th {
+        font-weight: normal;
+        text-align: left;
+        width: 30%;
+        font-size:14px;
+    }
+    .sys-info th, .sys-info td {
+        height: 20px;
+        line-height: 20px;
+        padding: 5px 0;
+        font-size:12px;
+    }
+    .totals{
+        border-radius: 5px;
+        -moz-border-radius: 5px 5px 0 0;
+        -webkit-border-radius: 5px 5px 0 0;
+        margin:5px 0 5px 0;
+        background-color: rgba(250, 250, 250, 0.3);
+        border:1px solid #eee;
+    }
+    .totals ul{clear:both;}
+    .totals li {
+        float:left;
+        margin-left:15px;
+        font-size:12px;
+        height: 30px;
+        line-height: 29px;
+        width: 100px;
+    }
+    .totals li a{line-height: 29px;}Ï
+    .totals li a:hover{text-decoration: none;}
+    .totals .hdli {
+        font-size:14px;
+        font-weight: bold;
+    }
