--- a/style/back/css/admin.css
+++ b/style/back/css/admin.css
@@ -207,7 +207,7 @@ textarea{border: 1px solid #ccc;border-radius: 2px;width:760px;height:40px;paddi
 
 /*分页*/
 .pagebar{margin:0 0 0 20px;}
-.pagebar a,.pagebar span{border-radius:2px;border:1px solid #555;float:left;display:inline-block;height:24px;line-height:24px;padding:0 8px; background:url(../image/pgbg.png) repeat-x 50% 50%;text-align:center;color:#333;margin-right:4px;text-decoration: none;}
+.pagebar a,.pagebar span{border-radius:2px;border:1px solid #555;float:left;display:inline-block;height:24px;line-height:24px;padding:0 8px; background:none;text-align:center;color:#333;margin-right:4px;text-decoration: none;}
 .pagebar a:hover,.pagebar span{background:#888;color:#fff;border:1px solid #888;}
 
 .page_right{font-size:12px; color:#999;margin-top:7px;}
