--- a/html/android.d.cn/css/jscrollPane.css
+++ b/html/android.d.cn/css/jscrollPane.css
@@ -122,5 +122,5 @@
 {
 	margin: 0 -3px 0 0;
 }
-.jspArrowUp{background:url(../images/update/arrow.jpg) 1px top repeat-x !important;_background-position:1px 2px !important;}
-.jspArrowDown{background:url(../images/update/arrow.jpg) 1px bottom repeat-x !important;_background-position:1px -13px !important;}
+.jspArrowUp{background:url(../images/arrow.jpg) 1px top repeat-x !important;_background-position:1px 2px !important;}
+.jspArrowDown{background:url(../images/arrow.jpg) 1px bottom repeat-x !important;_background-position:1px -13px !important;}
