--- a/style/libs/uploadify/uploadify.css
+++ b/style/libs/uploadify/uploadify.css
@@ -77,6 +77,9 @@ Released under the MIT License <http://www.opensource.org/licenses/mit-license.p
 	text-indent: -9999px;
 	width: 16px;
 }
+.uploadify-queue-item .start-end a {
+	float: right;margin-right:10px;
+}
 .uploadify-queue-item.completed {
 	background-color: #E5E5E5;
 }
@@ -90,3 +93,4 @@ Released under the MIT License <http://www.opensource.org/licenses/mit-license.p
 	height: 3px;
 	width: 1px;
 }
+.btn_class{border:0px;-moz-border-radius:2px;-webkit-border-radius:2px;border-radius:2px;}
