--- a/style/back/css/admin.css
+++ b/style/back/css/admin.css
@@ -326,7 +326,7 @@ textarea{border: 1px solid #ccc;border-radius: 2px;width:760px;height:40px;paddi
         border-radius: 0 0 5px 5px;
         -moz-border-radius: 5px 5px 0 0;
         -webkit-border-radius: 5px 5px 0 0;
-        height: 200px;
+        //height: 200px;
         overflow: hidden;
         border-bottom: 1px solid #F2F2F2;
         border-left: 1px solid #F2F2F2;
