--- a/style/wap/company/style_wap.css
+++ b/style/wap/company/style_wap.css
@@ -52,7 +52,7 @@ em{font-style:normal;}
 #position li{width:10px;height:10px;margin:0 3px;display:inline-block;-webkit-border-radius:5px;border-radius:5px;background-color:#AFAFAF;}
 #position li.cur{background-color:#FF0000;}
 .silder_tit{overflow:hidden;position:absolute; top:125px;left:0;height:30px;width:100%;text-indent:15px;line-height:30px;color:#fff;font-size:14px;background-color:rgba(0, 0, 0, 0.4)}
-header{background-color:#4097db;height:80px;text-align:center;}
+header{background-color:#1f272b ;height:80px;text-align:center;} /*#4097db*/
 .logo{display:block;width:100%;height:80px;}
 
 /*index*/
